commit bilingual contents

--- a/aspnetcore/security/samesite/rp31.md
+++ b/aspnetcore/security/samesite/rp31.md
@@ -1,48 +1,49 @@
 ---
-title: Beispiel für "ASP.net Core 3,1 Razor pages SameSite" cookie
+title: 'Beispiel für "ASP.net Core 3,1 :::no-loc(Razor)::: pages SameSite" :::no-loc(cookie):::'
 author: rick-anderson
-description: Beispiel für "ASP.net Core 3,1 Razor pages SameSite" cookie
+description: 'Beispiel für "ASP.net Core 3,1 :::no-loc(Razor)::: pages SameSite" :::no-loc(cookie):::'
 monikerRange: = aspnetcore-3.1
 ms.author: riande
 ms.custom: mvc
 ms.date: 12/03/2019
 no-loc:
-- ASP.NET Core Identity
-- cookie
-- Cookie
-- Blazor
-- Blazor Server
-- Blazor WebAssembly
-- Identity
-- Let's Encrypt
-- Razor
-- SignalR
+- ':::no-loc(appsettings.json):::'
+- ':::no-loc(ASP.NET Core Identity):::'
+- ':::no-loc(cookie):::'
+- ':::no-loc(Cookie):::'
+- ':::no-loc(Blazor):::'
+- ':::no-loc(Blazor Server):::'
+- ':::no-loc(Blazor WebAssembly):::'
+- ':::no-loc(Identity):::'
+- ":::no-loc(Let's Encrypt):::"
+- ':::no-loc(Razor):::'
+- ':::no-loc(SignalR):::'
 uid: security/samesite/rp31
-ms.openlocfilehash: 2e178f0f2c3849a17ef3d3aeaa96f3e4f286e967
-ms.sourcegitcommit: 24106b7ffffc9fff410a679863e28aeb2bbe5b7e
+ms.openlocfilehash: 46865052339ecff8593ad82548b83dee2cd4b283
+ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 09/17/2020
-ms.locfileid: "90722578"
+ms.lasthandoff: 10/30/2020
+ms.locfileid: "93058284"
 ---
-# <a name="aspnet-core-31-no-locrazor-pages-samesite-no-loccookie-sample"></a><span data-ttu-id="b9c1d-103">Beispiel für "ASP.net Core 3,1 Razor pages SameSite" cookie</span><span class="sxs-lookup"><span data-stu-id="b9c1d-103">ASP.NET Core 3.1 Razor Pages SameSite cookie sample</span></span>
+# <a name="aspnet-core-31-no-locrazor-pages-samesite-no-loccookie-sample"></a><span data-ttu-id="7aac6-103">Beispiel für "ASP.net Core 3,1 :::no-loc(Razor)::: pages SameSite" :::no-loc(cookie):::</span><span class="sxs-lookup"><span data-stu-id="7aac6-103">ASP.NET Core 3.1 :::no-loc(Razor)::: Pages SameSite :::no-loc(cookie)::: sample</span></span>
 
-<span data-ttu-id="b9c1d-104">ASP.net Core 3,0 verfügt über integrierte Unterstützung für das [SameSite](https://www.owasp.org/index.php/SameSite) -Attribut, einschließlich `SameSiteMode` des-Attribut Werts, `Unspecified` um das Schreiben des Attributs zu unterdrücken.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-104">ASP.NET Core 3.0 has built-in support for the [SameSite](https://www.owasp.org/index.php/SameSite) attribute, including a `SameSiteMode` attribute value of `Unspecified` to suppress writing the attribute.</span></span>
+<span data-ttu-id="7aac6-104">ASP.net Core 3,0 verfügt über integrierte Unterstützung für das [SameSite](https://www.owasp.org/index.php/SameSite) -Attribut, einschließlich `SameSiteMode` des-Attribut Werts, `Unspecified` um das Schreiben des Attributs zu unterdrücken.</span><span class="sxs-lookup"><span data-stu-id="7aac6-104">ASP.NET Core 3.0 has built-in support for the [SameSite](https://www.owasp.org/index.php/SameSite) attribute, including a `SameSiteMode` attribute value of `Unspecified` to suppress writing the attribute.</span></span>
 
-[!INCLUDE[](~/includes/SameSiteIdentity.md)]
+[!INCLUDE[](~/includes/SameSite:::no-loc(Identity):::.md)]
 
-## <a name="writing-the-samesite-attribute"></a><a name="sampleCode"></a><span data-ttu-id="b9c1d-105">Schreiben des SameSite-Attributs</span><span class="sxs-lookup"><span data-stu-id="b9c1d-105">Writing the SameSite attribute</span></span>
+## <a name="writing-the-samesite-attribute"></a><a name="sampleCode"></a><span data-ttu-id="7aac6-105">Schreiben des SameSite-Attributs</span><span class="sxs-lookup"><span data-stu-id="7aac6-105">Writing the SameSite attribute</span></span>
 
-<span data-ttu-id="b9c1d-106">Im folgenden finden Sie ein Beispiel für das Schreiben eines SameSite-Attributs für einen cookie .</span><span class="sxs-lookup"><span data-stu-id="b9c1d-106">Following is an example of how to write a SameSite attribute on a cookie;</span></span>
+<span data-ttu-id="7aac6-106">Im folgenden finden Sie ein Beispiel für das Schreiben eines SameSite-Attributs für einen :::no-loc(cookie)::: .</span><span class="sxs-lookup"><span data-stu-id="7aac6-106">Following is an example of how to write a SameSite attribute on a :::no-loc(cookie):::;</span></span>
 
 ```c#
-var cookieOptions = new CookieOptions
+var :::no-loc(cookie):::Options = new :::no-loc(Cookie):::Options
 {
     // Set the secure flag, which Chrome's changes will require for SameSite none.
     // Note this will also require you to be running on HTTPS
     Secure = true,
 
-    // Set the cookie to HTTP only which is good practice unless you really do need
+    // Set the :::no-loc(cookie)::: to HTTP only which is good practice unless you really do need
     // to access it client side in scripts.
     HttpOnly = true,
 
@@ -51,46 +52,46 @@ var cookieOptions = new CookieOptions
     SameSite = SameSiteMode.None
 };
 
-// Add the cookie to the response cookie collection
-Response.Cookies.Append(CookieName, "cookieValue", cookieOptions);
+// Add the :::no-loc(cookie)::: to the response :::no-loc(cookie)::: collection
+Response.:::no-loc(Cookie):::s.Append(:::no-loc(Cookie):::Name, ":::no-loc(cookie):::Value", :::no-loc(cookie):::Options);
 ```
 
-## <a name="setting-no-loccookie-authentication-and-session-state-no-loccookies"></a><span data-ttu-id="b9c1d-107">Festlegen der Cookie Authentifizierung und des Sitzungs Zustands cookie</span><span class="sxs-lookup"><span data-stu-id="b9c1d-107">Setting Cookie Authentication and Session State cookies</span></span>
+## <a name="setting-no-loccookie-authentication-and-session-state-no-loccookies"></a><span data-ttu-id="7aac6-107">Festlegen der :::no-loc(Cookie)::: Authentifizierung und des Sitzungs Zustands :::no-loc(cookie):::</span><span class="sxs-lookup"><span data-stu-id="7aac6-107">Setting :::no-loc(Cookie)::: Authentication and Session State :::no-loc(cookie):::s</span></span>
 
-<span data-ttu-id="b9c1d-108">Cookie Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](../samesite.md?view=aspnetcore-3.0) legen ihre SameSite-Optionen über Cookie Optionen fest, z. b.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-108">Cookie authentication, session state and [various other components](../samesite.md?view=aspnetcore-3.0) set their sameSite options via Cookie options, for example</span></span>
+<span data-ttu-id="7aac6-108">:::no-loc(Cookie)::: Authentifizierung, Sitzungs Status und [verschiedene andere Komponenten](../samesite.md?view=aspnetcore-3.0) legen ihre SameSite-Optionen über :::no-loc(Cookie)::: Optionen fest, z. b.</span><span class="sxs-lookup"><span data-stu-id="7aac6-108">:::no-loc(Cookie)::: authentication, session state and [various other components](../samesite.md?view=aspnetcore-3.0) set their sameSite options via :::no-loc(Cookie)::: options, for example</span></span>
 
 ```c#
-services.AddAuthentication(CookieAuthenticationDefaults.AuthenticationScheme)
-    .AddCookie(options =>
+services.AddAuthentication(:::no-loc(Cookie):::AuthenticationDefaults.AuthenticationScheme)
+    .Add:::no-loc(Cookie):::(options =>
     {
-        options.Cookie.SameSite = SameSiteMode.None;
-        options.Cookie.SecurePolicy = CookieSecurePolicy.Always;
-        options.Cookie.IsEssential = true;
+        options.:::no-loc(Cookie):::.SameSite = SameSiteMode.None;
+        options.:::no-loc(Cookie):::.SecurePolicy = :::no-loc(Cookie):::SecurePolicy.Always;
+        options.:::no-loc(Cookie):::.IsEssential = true;
     });
 
 services.AddSession(options =>
 {
-    options.Cookie.SameSite = SameSiteMode.None;
-    options.Cookie.SecurePolicy = CookieSecurePolicy.Always;
-    options.Cookie.IsEssential = true;
+    options.:::no-loc(Cookie):::.SameSite = SameSiteMode.None;
+    options.:::no-loc(Cookie):::.SecurePolicy = :::no-loc(Cookie):::SecurePolicy.Always;
+    options.:::no-loc(Cookie):::.IsEssential = true;
 });
 ```
 
-<span data-ttu-id="b9c1d-109">Legen Sie in dem obigen Code sowohl bei der cookie Authentifizierung als auch bei dem Sitzungs Status das Attribut "SameSite" auf "None" fest, und geben Sie das Attribut mit einem `None` Wert aus.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-109">In the code shown above both cookie authentication and session state set their sameSite attribute to None, emitting the attribute with a `None` value, and also set the Secure attribute to true.</span></span>
+<span data-ttu-id="7aac6-109">Legen Sie in dem obigen Code sowohl bei der :::no-loc(cookie)::: Authentifizierung als auch bei dem Sitzungs Status das Attribut "SameSite" auf "None" fest, und geben Sie das Attribut mit einem `None` Wert aus.</span><span class="sxs-lookup"><span data-stu-id="7aac6-109">In the code shown above both :::no-loc(cookie)::: authentication and session state set their sameSite attribute to None, emitting the attribute with a `None` value, and also set the Secure attribute to true.</span></span>
 
-### <a name="run-the-sample"></a><span data-ttu-id="b9c1d-110">Ausführen des Beispiels</span><span class="sxs-lookup"><span data-stu-id="b9c1d-110">Run the sample</span></span>
+### <a name="run-the-sample"></a><span data-ttu-id="7aac6-110">Ausführen des Beispiels</span><span class="sxs-lookup"><span data-stu-id="7aac6-110">Run the sample</span></span>
 
-<span data-ttu-id="b9c1d-111">Wenn Sie das [Beispiel Projekt](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31RazorPages)ausführen, laden Sie den Browser Debugger auf der Startseite, und verwenden Sie ihn, um die cookie Sammlung für den Standort anzuzeigen.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-111">If you run the [sample project](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31RazorPages), load your browser debugger on the initial page and use it to view the cookie collection for the site.</span></span> <span data-ttu-id="b9c1d-112">Wenn Sie dies in Edge und Chrome tun möchten, `F12` Wählen Sie die `Application` Registerkarte aus, und klicken Sie unter der `Cookies` Option im Abschnitt auf die URL der Website `Storage` .</span><span class="sxs-lookup"><span data-stu-id="b9c1d-112">To do so in Edge and Chrome press `F12` then select the `Application` tab and click the site URL under the `Cookies` option in the `Storage` section.</span></span>
+<span data-ttu-id="7aac6-111">Wenn Sie das [Beispiel Projekt](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31:::no-loc(Razor):::Pages)ausführen, laden Sie den Browser Debugger auf der Startseite, und verwenden Sie ihn, um die :::no-loc(cookie)::: Sammlung für den Standort anzuzeigen.</span><span class="sxs-lookup"><span data-stu-id="7aac6-111">If you run the [sample project](https://github.com/blowdart/AspNetSameSiteSamples/tree/master/AspNetCore31:::no-loc(Razor):::Pages), load your browser debugger on the initial page and use it to view the :::no-loc(cookie)::: collection for the site.</span></span> <span data-ttu-id="7aac6-112">Wenn Sie dies in Edge und Chrome tun möchten, `F12` Wählen Sie die `Application` Registerkarte aus, und klicken Sie unter der `:::no-loc(Cookie):::s` Option im Abschnitt auf die URL der Website `Storage` .</span><span class="sxs-lookup"><span data-stu-id="7aac6-112">To do so in Edge and Chrome press `F12` then select the `Application` tab and click the site URL under the `:::no-loc(Cookie):::s` option in the `Storage` section.</span></span>
 
 ![Browser Debugger::: NO-LOC (Cookie)::: List](BrowserDebugger.png)
 
-<span data-ttu-id="b9c1d-114">Sie können in der obigen Abbildung sehen, dass das cookie , das durch das Beispiel erstellt wird, wenn Sie auf die Schaltfläche "Create SameSite Cookie " klicken, über einen SameSite-Attribut Wert verfügt, der mit `Lax` dem im [Beispielcode](#sampleCode)festgelegten Wert übereinstimmt.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-114">You can see from the image above that the cookie created by the sample when you click the "Create SameSite Cookie" button has a SameSite attribute value of `Lax`, matching the value set in the [sample code](#sampleCode).</span></span>
+<span data-ttu-id="7aac6-114">Sie können in der obigen Abbildung sehen, dass das :::no-loc(cookie)::: , das durch das Beispiel erstellt wird, wenn Sie auf die Schaltfläche "Create SameSite :::no-loc(Cookie)::: " klicken, über einen SameSite-Attribut Wert verfügt, der mit `Lax` dem im [Beispielcode](#sampleCode)festgelegten Wert übereinstimmt.</span><span class="sxs-lookup"><span data-stu-id="7aac6-114">You can see from the image above that the :::no-loc(cookie)::: created by the sample when you click the "Create SameSite :::no-loc(Cookie):::" button has a SameSite attribute value of `Lax`, matching the value set in the [sample code](#sampleCode).</span></span>
 
-## <a name="intercepting-no-loccookies"></a><a name="interception"></a><span data-ttu-id="b9c1d-115">Abfangen von cookie s</span><span class="sxs-lookup"><span data-stu-id="b9c1d-115">Intercepting cookies</span></span>
+## <a name="intercepting-no-loccookies"></a><a name="interception"></a><span data-ttu-id="7aac6-115">Abfangen von :::no-loc(cookie)::: s</span><span class="sxs-lookup"><span data-stu-id="7aac6-115">Intercepting :::no-loc(cookie):::s</span></span>
 
-<span data-ttu-id="b9c1d-116">Um s abzufangen cookie , muss die Middleware verwendet werden, um den Wert None gemäß der Unterstützung im Browser-Agent des Benutzers anzupassen `CookiePolicy` .</span><span class="sxs-lookup"><span data-stu-id="b9c1d-116">In order to intercept cookies, to adjust the none value according to its support in the user's browser agent you must use the `CookiePolicy` middleware.</span></span> <span data-ttu-id="b9c1d-117">Diese muss in der HTTP-Anforderungs Pipeline **vor** allen Komponenten platziert werden, die cookie in schreiben und in konfiguriert sind `ConfigureServices()` .</span><span class="sxs-lookup"><span data-stu-id="b9c1d-117">This must be placed into the http request pipeline **before** any components that write cookies and configured within `ConfigureServices()`.</span></span>
+<span data-ttu-id="7aac6-116">Um s abzufangen :::no-loc(cookie)::: , muss die Middleware verwendet werden, um den Wert None gemäß der Unterstützung im Browser-Agent des Benutzers anzupassen `:::no-loc(Cookie):::Policy` .</span><span class="sxs-lookup"><span data-stu-id="7aac6-116">In order to intercept :::no-loc(cookie):::s, to adjust the none value according to its support in the user's browser agent you must use the `:::no-loc(Cookie):::Policy` middleware.</span></span> <span data-ttu-id="7aac6-117">Diese muss in der HTTP-Anforderungs Pipeline **vor** allen Komponenten platziert werden, die :::no-loc(cookie)::: in schreiben und in konfiguriert sind `ConfigureServices()` .</span><span class="sxs-lookup"><span data-stu-id="7aac6-117">This must be placed into the http request pipeline **before** any components that write :::no-loc(cookie):::s and configured within `ConfigureServices()`.</span></span>
 
-<span data-ttu-id="b9c1d-118">Um Sie in die Pipeline einzufügen, verwenden Sie `app.UseCookiePolicy()` in der- `Configure(IApplicationBuilder, IHostingEnvironment)` Methode in Ihrer [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span><span class="sxs-lookup"><span data-stu-id="b9c1d-118">To insert it into the pipeline use `app.UseCookiePolicy()` in the `Configure(IApplicationBuilder, IHostingEnvironment)` method in your [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span></span> <span data-ttu-id="b9c1d-119">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="b9c1d-119">For example</span></span>
+<span data-ttu-id="7aac6-118">Um Sie in die Pipeline einzufügen, verwenden Sie `app.Use:::no-loc(Cookie):::Policy()` in der- `Configure(IApplicationBuilder, IHostingEnvironment)` Methode in Ihrer [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span><span class="sxs-lookup"><span data-stu-id="7aac6-118">To insert it into the pipeline use `app.Use:::no-loc(Cookie):::Policy()` in the `Configure(IApplicationBuilder, IHostingEnvironment)` method in your [Startup.cs](https://github.com/blowdart/AspNetSameSiteSamples/blob/master/AspNetCore21MVC/Startup.cs).</span></span> <span data-ttu-id="7aac6-119">Beispiel:</span><span class="sxs-lookup"><span data-stu-id="7aac6-119">For example</span></span>
 
 ```c#
 public void Configure(IApplicationBuilder app, IHostingEnvironment env)
@@ -107,7 +108,7 @@ public void Configure(IApplicationBuilder app, IHostingEnvironment env)
 
     app.UseHttpsRedirection();
     app.UseStaticFiles();
-    app.UseCookiePolicy();
+    app.Use:::no-loc(Cookie):::Policy();
     app.UseAuthentication();
     app.UseSession();
 
@@ -120,23 +121,23 @@ public void Configure(IApplicationBuilder app, IHostingEnvironment env)
 }
 ```
 
-<span data-ttu-id="b9c1d-120">Anschließend können Sie in der `ConfigureServices(IServiceCollection services)` cookie Richtlinie konfigurieren, um eine Hilfsklasse aufzurufen, wenn e angefügt cookie oder gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-120">Then in the `ConfigureServices(IServiceCollection services)` configure the cookie policy to call out to a helper class when cookies are appended or deleted, like so;</span></span>
+<span data-ttu-id="7aac6-120">Anschließend können Sie in der `ConfigureServices(IServiceCollection services)` :::no-loc(cookie)::: Richtlinie konfigurieren, um eine Hilfsklasse aufzurufen, wenn e angefügt :::no-loc(cookie)::: oder gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="7aac6-120">Then in the `ConfigureServices(IServiceCollection services)` configure the :::no-loc(cookie)::: policy to call out to a helper class when :::no-loc(cookie):::s are appended or deleted, like so;</span></span>
 
 ```c#
 public void ConfigureServices(IServiceCollection services)
 {
-    services.Configure<CookiePolicyOptions>(options =>
+    services.Configure<:::no-loc(Cookie):::PolicyOptions>(options =>
     {
         options.CheckConsentNeeded = context => true;
         options.MinimumSameSitePolicy = SameSiteMode.None;
-        options.OnAppendCookie = cookieContext =>
-            CheckSameSite(cookieContext.Context, cookieContext.CookieOptions);
-        options.OnDeleteCookie = cookieContext =>
-            CheckSameSite(cookieContext.Context, cookieContext.CookieOptions);
+        options.OnAppend:::no-loc(Cookie)::: = :::no-loc(cookie):::Context =>
+            CheckSameSite(:::no-loc(cookie):::Context.Context, :::no-loc(cookie):::Context.:::no-loc(Cookie):::Options);
+        options.OnDelete:::no-loc(Cookie)::: = :::no-loc(cookie):::Context =>
+            CheckSameSite(:::no-loc(cookie):::Context.Context, :::no-loc(cookie):::Context.:::no-loc(Cookie):::Options);
     });
 }
 
-private void CheckSameSite(HttpContext httpContext, CookieOptions options)
+private void CheckSameSite(HttpContext httpContext, :::no-loc(Cookie):::Options options)
 {
     if (options.SameSite == SameSiteMode.None)
     {
@@ -149,15 +150,15 @@ private void CheckSameSite(HttpContext httpContext, CookieOptions options)
 }
 ```
 
-<span data-ttu-id="b9c1d-121">Die Hilfsfunktion `CheckSameSite(HttpContext, CookieOptions)` :</span><span class="sxs-lookup"><span data-stu-id="b9c1d-121">The helper function `CheckSameSite(HttpContext, CookieOptions)`:</span></span>
+<span data-ttu-id="7aac6-121">Die Hilfsfunktion `CheckSameSite(HttpContext, :::no-loc(Cookie):::Options)` :</span><span class="sxs-lookup"><span data-stu-id="7aac6-121">The helper function `CheckSameSite(HttpContext, :::no-loc(Cookie):::Options)`:</span></span>
 
-* <span data-ttu-id="b9c1d-122">Wird aufgerufen cookie , wenn e an die Anforderung angefügt oder aus der Anforderung gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-122">Is called when cookies are appended to the request or deleted from the request.</span></span>
-* <span data-ttu-id="b9c1d-123">Prüft, ob die- `SameSite` Eigenschaft auf festgelegt ist `None` .</span><span class="sxs-lookup"><span data-stu-id="b9c1d-123">Checks to see if the `SameSite` property is set to `None`.</span></span>
-* <span data-ttu-id="b9c1d-124">Wenn `SameSite` auf festgelegt ist `None` und der aktuelle Benutzer-Agent bekanntermaßen den None-Attribut Wert nicht unterstützt.</span><span class="sxs-lookup"><span data-stu-id="b9c1d-124">If `SameSite` is set to `None` and the current user agent is known to not support the none attribute value.</span></span> <span data-ttu-id="b9c1d-125">Die Überprüfung erfolgt mithilfe der [samesitesupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) -Klasse:</span><span class="sxs-lookup"><span data-stu-id="b9c1d-125">The check is done using the [SameSiteSupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) class:</span></span>
-  * <span data-ttu-id="b9c1d-126">Legt `SameSite` fest, dass der Wert nicht durch Festlegen der-Eigenschaft auf ausgegeben wird. `(SameSiteMode)(-1)`</span><span class="sxs-lookup"><span data-stu-id="b9c1d-126">Sets `SameSite` to not emit the value by setting the property to `(SameSiteMode)(-1)`</span></span>
+* <span data-ttu-id="7aac6-122">Wird aufgerufen :::no-loc(cookie)::: , wenn e an die Anforderung angefügt oder aus der Anforderung gelöscht werden.</span><span class="sxs-lookup"><span data-stu-id="7aac6-122">Is called when :::no-loc(cookie):::s are appended to the request or deleted from the request.</span></span>
+* <span data-ttu-id="7aac6-123">Prüft, ob die- `SameSite` Eigenschaft auf festgelegt ist `None` .</span><span class="sxs-lookup"><span data-stu-id="7aac6-123">Checks to see if the `SameSite` property is set to `None`.</span></span>
+* <span data-ttu-id="7aac6-124">Wenn `SameSite` auf festgelegt ist `None` und der aktuelle Benutzer-Agent bekanntermaßen den None-Attribut Wert nicht unterstützt.</span><span class="sxs-lookup"><span data-stu-id="7aac6-124">If `SameSite` is set to `None` and the current user agent is known to not support the none attribute value.</span></span> <span data-ttu-id="7aac6-125">Die Überprüfung erfolgt mithilfe der [samesitesupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) -Klasse:</span><span class="sxs-lookup"><span data-stu-id="7aac6-125">The check is done using the [SameSiteSupport](https://github.com/dotnet/AspNetCore.Docs/tree/master/aspnetcore/security/samesite/sample/snippets/SameSiteSupport.cs) class:</span></span>
+  * <span data-ttu-id="7aac6-126">Legt `SameSite` fest, dass der Wert nicht durch Festlegen der-Eigenschaft auf ausgegeben wird. `(SameSiteMode)(-1)`</span><span class="sxs-lookup"><span data-stu-id="7aac6-126">Sets `SameSite` to not emit the value by setting the property to `(SameSiteMode)(-1)`</span></span>
 
-### <a name="more-information"></a><span data-ttu-id="b9c1d-127">Weitere Informationen</span><span class="sxs-lookup"><span data-stu-id="b9c1d-127">More Information</span></span>
+### <a name="more-information"></a><span data-ttu-id="7aac6-127">Weitere Informationen</span><span class="sxs-lookup"><span data-stu-id="7aac6-127">More Information</span></span>
  
-<span data-ttu-id="b9c1d-128">[Chrome-Updates](https://www.chromium.org/updates/same-site) 
- [Dokumentation zu ASP.net Core SameSite](xref:security/samesite)</span><span class="sxs-lookup"><span data-stu-id="b9c1d-128">[Chrome Updates](https://www.chromium.org/updates/same-site)
+<span data-ttu-id="7aac6-128">[Chrome-Updates](https://www.chromium.org/updates/same-site) 
+ [Dokumentation zu ASP.net Core SameSite](xref:security/samesite)</span><span class="sxs-lookup"><span data-stu-id="7aac6-128">[Chrome Updates](https://www.chromium.org/updates/same-site)
 [ASP.NET Core SameSite Documentation](xref:security/samesite)</span></span>
