commit translated contents

--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -6,6 +6,7 @@ ms.author: scaddie
 ms.custom: mvc
 ms.date: 05/28/2019
 no-loc:
+- appsettings.json
 - ASP.NET Core Identity
 - cookie
 - Cookie
@@ -17,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/21-to-22
-ms.openlocfilehash: 72766a9e24f341f05eeb03e70f933ff16fc6e095
-ms.sourcegitcommit: 65add17f74a29a647d812b04517e46cbc78258f9
+ms.openlocfilehash: 092a74c833d2e8191def9f6800889f8c958022bc
+ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 08/19/2020
-ms.locfileid: "88634942"
+ms.lasthandoff: 10/30/2020
+ms.locfileid: "93060481"
 ---
 # <a name="migrate-from-aspnet-core-21-to-22"></a>Migrieren von ASP.net Core 2,1 zu 2,2
 
@@ -131,7 +132,7 @@ Wenn Ihre Lösung auf eine [global.js](/dotnet/core/tools/global-json) Datei bas
 
 ## <a name="update-launch-settings"></a>Start Einstellungen aktualisieren
 
-Wenn Sie Visual Studio Code verwenden, aktualisieren Sie die Datei mit den Start Einstellungen des Projekts (*vscode/launch.json*). Der `program` Pfad sollte auf den neuen TFM verweisen:
+Wenn Sie Visual Studio Code verwenden, aktualisieren Sie die Datei mit den Start Einstellungen des Projekts ( *vscode/launch.json* ). Der `program` Pfad sollte auf den neuen TFM verweisen:
 
 [!code-json[](21-to-22/samples/launch.json?highlight=9)]
 
@@ -300,7 +301,7 @@ Wenn Ihre APP die Initialisierung, Filterung und Konfiguration von Anbietern in 
   }
   ```
 
-Weitere Informationen finden Sie unter <xref:fundamentals/logging/index>.
+Weitere Informationen finden Sie unter <xref:fundamentals/logging/index>
 
 ## <a name="additional-resources"></a>Zusätzliche Ressourcen
 
