--- a/aspnetcore/migration/22-to-30.md
+++ b/aspnetcore/migration/22-to-30.md
@@ -6,6 +6,7 @@ ms.author: riande
 ms.custom: mvc
 ms.date: 05/03/2020
 no-loc:
+- appsettings.json
 - ASP.NET Core Identity
 - cookie
 - Cookie
@@ -17,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/22-to-30
-ms.openlocfilehash: c76eff595d0be1eebaac00bf0292a6dbca2649db
-ms.sourcegitcommit: d1a897ebd89daa05170ac448e4831d327f6b21a8
+ms.openlocfilehash: 5f6b0b8d56649dc5fd194ee43d93139f80ce9106
+ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/01/2020
-ms.locfileid: "91606812"
+ms.lasthandoff: 10/30/2020
+ms.locfileid: "93060429"
 ---
 # <a name="migrate-from-aspnet-core-22-to-30"></a>Migrieren von ASP.net Core 2,2 zu 3,0
 
@@ -184,7 +185,7 @@ Um die vollständige Liste der Pakete anzuzeigen, die nicht mehr erstellt werden
 
 ### <a name="framework-reference"></a>Frameworkverweis
 
-Features von ASP.net Core, die über eines der oben aufgeführten Pakete verfügbar waren, sind als Teil des frei `Microsoft.AspNetCore.App` gegebenen Frameworks verfügbar. Das *freigegebene Framework* ist der Satz von Assemblys (*DLL*-Dateien), die auf dem Computer installiert werden und eine Laufzeitkomponente sowie ein Zielpaket enthalten. Weitere Informationen finden Sie unter [The shared framework](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) (Das freigegebene Framework).
+Features von ASP.net Core, die über eines der oben aufgeführten Pakete verfügbar waren, sind als Teil des frei `Microsoft.AspNetCore.App` gegebenen Frameworks verfügbar. Das *freigegebene Framework* ist der Satz von Assemblys ( *DLL* -Dateien), die auf dem Computer installiert werden und eine Laufzeitkomponente sowie ein Zielpaket enthalten. Weitere Informationen finden Sie unter [The shared framework](https://natemcmaster.com/blog/2018/08/29/netcore-primitives-2/) (Das freigegebene Framework).
 
 * Projekte, die auf das `Microsoft.NET.Sdk.Web` SDK abzielen, verweisen implizit auf das `Microsoft.AspNetCore.App`-Framework.
 
@@ -341,7 +342,7 @@ Razor In Klassen Bibliotheks Projekten, die Benutzeroberflächen Komponenten fü
 
 ### <a name="configuration"></a>Konfiguration
 
-Migrieren Sie die Kestrel-Konfiguration zum von bereitgestellten [Webhost](#hostb) -Generator `ConfigureWebHostDefaults` (*Program.cs*):
+Migrieren Sie die Kestrel-Konfiguration zum von bereitgestellten [Webhost](#hostb) -Generator `ConfigureWebHostDefaults` ( *Program.cs* ):
 
 ```csharp
 public static IHostBuilder CreateHostBuilder(string[] args) =>
@@ -460,7 +461,7 @@ Beachten Sie, dass dies dazu führen kann, dass die Anwendung eine Lauf Zeit Aus
 
 ### <a name="microsoftaspnetcoreserverkestrelhttps-assembly-removed"></a>Die Assembly "Microsoft. aspnetcore. Server. Kestrel. https" wurde entfernt.
 
-In ASP.net Core 2,1 wurde der Inhalt *Microsoft.AspNetCore.Server.Kestrel.Https.dll* in *Microsoft.AspNetCore.Server.Kestrel.Core.dll*verschoben. Dabei handelt es sich um ein nicht Erbrechtes Update mit `TypeForwardedTo` Attributen. Bei 3,0 wurden die leeren *Microsoft.AspNetCore.Server.Kestrel.Https.dll* Assembly und das nuget-Paket entfernt.
+In ASP.net Core 2,1 wurde der Inhalt *Microsoft.AspNetCore.Server.Kestrel.Https.dll* in *Microsoft.AspNetCore.Server.Kestrel.Core.dll* verschoben. Dabei handelt es sich um ein nicht Erbrechtes Update mit `TypeForwardedTo` Attributen. Bei 3,0 wurden die leeren *Microsoft.AspNetCore.Server.Kestrel.Https.dll* Assembly und das nuget-Paket entfernt.
 
 Bibliotheken, die auf [Microsoft. aspnetcore. Server. Kestrel. HTTPS](https://www.nuget.org/packages/Microsoft.AspNetCore.Server.Kestrel.Https) verweisen, sollten ASP.net Core Abhängigkeiten auf 2,1 oder höher aktualisieren.
 
@@ -591,7 +592,7 @@ Allgemeine Hinweise:
 
 * Fügen Sie `UseRouting`hinzu.
 * Wenn die APP aufruft `UseStaticFiles` , platzieren Sie es `UseStaticFiles` **vor** `UseRouting` .
-* Wenn die APP Authentifizierungs-/Autorisierungsfeatures wie `AuthorizePage` oder verwendet `[Authorize]` , platzieren Sie den-Befehl unter `UseAuthentication` und `UseAuthorization` : **nach**und `UseRouting` `UseCors` , aber vor `UseEndpoints` :
+* Wenn die APP Authentifizierungs-/Autorisierungsfeatures wie `AuthorizePage` oder verwendet `[Authorize]` , platzieren Sie den-Befehl unter `UseAuthentication` und `UseAuthorization` : **nach** und `UseRouting` `UseCors` , aber vor `UseEndpoints` :
 
   ```csharp
   public void Configure(IApplicationBuilder app)
@@ -694,7 +695,7 @@ Unterstützung für die Autorisierung und cors ist in Bezug auf den [Middleware]
 
 Zuvor war es möglicherweise schwierig, cors zu konfigurieren. Die Middleware wurde zur Verwendung in einigen Anwendungsfällen bereitgestellt, aber MVC-Filter waren in anderen Anwendungsfällen **ohne** die Middleware vorgesehen. Bei ASP.net Core 3,0 wird empfohlen, dass alle apps, die cors benötigen, die cors-Middleware zusammen mit dem Endpunkt Routing verwenden. `UseCors` kann mit einer Standard Richtlinie angegeben werden, und `[EnableCors]` die-und- `[DisableCors]` Attribute können verwendet werden, um die Standard Richtlinie nach Bedarf zu überschreiben.
 
-Im folgenden Beispiel:
+Siehe folgendes Beispiel:
 
 * Cors ist für alle Endpunkte mit der `default` benannten Richtlinie aktiviert.
 * Die- `MyController` Klasse deaktiviert cors mit dem- `[DisableCors]` Attribut.
@@ -908,7 +909,7 @@ Ersetzen Sie Folgendes:
 
 Da das Routing nun die Unterstützung für mehr als nur MVC umfasst, hat sich die Terminologie geändert, damit diese Methoden deutlich erkennen können, was Sie tun. Herkömmliche Routen wie `MapControllerRoute` / `MapAreaControllerRoute` / `MapDefaultControllerRoute` werden in der Reihenfolge angewendet, in der Sie hinzugefügt werden. Platzieren Sie zunächst spezifischere Routen (z. b. Routen für einen Bereich).
 
-Im folgenden Beispiel:
+Siehe folgendes Beispiel:
 
 * `MapControllers` Fügt Unterstützung für Attribut Weiterleitungs Controller hinzu.
 * `MapAreaControllerRoute` Fügt eine konventionelle Route für Controller in einem Bereich hinzu.
@@ -936,7 +937,7 @@ public void Configure(IApplicationBuilder app)
 
 #### <a name="async-suffix-removal-from-controller-action-names"></a>Asynchrones Suffix aus Controller-Aktions Namen entfernen
 
-In ASP.net Core 3,0 entfernt ASP.net Core MVC das `Async` Suffix aus den Controller Aktions Namen. Das Routing und die Verknüpfungs Generierung sind von dieser neuen Standardeinstellung betroffen. Beispiel:
+In ASP.net Core 3,0 entfernt ASP.net Core MVC das `Async` Suffix aus den Controller Aktions Namen. Das Routing und die Verknüpfungs Generierung sind von dieser neuen Standardeinstellung betroffen. Zum Beispiel:
 
 ```csharp
 public class ProductsController : Controller
@@ -952,7 +953,7 @@ public class ProductsController : Controller
 Vor ASP.net Core 3,0:
 
 * Auf die vorherige Aktion kann auf der Route " *Products/listasync* " zugegriffen werden.
-* Die Link Generierung erforderte das Angeben des Suffixes `Async` . Beispiel:
+* Die Link Generierung erforderte das Angeben des Suffixes `Async` . Zum Beispiel:
 
     ```cshtml
     <a asp-controller="Products" asp-action="ListAsync">List</a>
@@ -961,7 +962,7 @@ Vor ASP.net Core 3,0:
 In ASP.net Core 3,0:
 
 * Auf die vorangehende Aktion kann auf der Route " *Products/List* " zugegriffen werden.
-* Bei der Link Generierung muss das Suffix nicht angegeben werden `Async` . Beispiel:
+* Bei der Link Generierung muss das Suffix nicht angegeben werden `Async` . Zum Beispiel:
 
     ```cshtml
     <a asp-controller="Products" asp-action="List">List</a>
@@ -1077,16 +1078,16 @@ Weitere Informationen finden Sie unter [vermeiden der Start Dienst Injektion in 
 
 ## <a name="addauthorization-moved-to-a-different-assembly"></a>Addauthorization in eine andere Assembly verschoben
 
-Die Methoden ASP.net Core 2,2 und niedriger `AddAuthorization` in *Microsoft.AspNetCore.Authorization.dll*:
+Die Methoden ASP.net Core 2,2 und niedriger `AddAuthorization` in *Microsoft.AspNetCore.Authorization.dll* :
 
 * Wurden umbenannt `AddAuthorizationCore` .
-* Wurden in *Microsoft.AspNetCore.Authorization.Policy.dll*verschoben.
+* Wurden in *Microsoft.AspNetCore.Authorization.Policy.dll* verschoben.
 
 Apps, die sowohl *Microsoft.AspNetCore.Authorization.dll* als auch *Microsoft.AspNetCore.Authorization.Policy.dll* verwenden, sind nicht betroffen.
 
 Apps, die *Microsoft.AspNetCore.Authorization.Policy.dll* nicht verwenden, sollten eine der folgenden Aktionen ausführen:
 
-* Fügen Sie einen Verweis auf *Microsoft.AspNetCore.Authorization.Policy.dll*hinzu. Diese Vorgehensweise funktioniert für die meisten apps und ist alles, was erforderlich ist.
+* Fügen Sie einen Verweis auf *Microsoft.AspNetCore.Authorization.Policy.dll* hinzu. Diese Vorgehensweise funktioniert für die meisten apps und ist alles, was erforderlich ist.
 * Wechseln zu mithilfe von `AddAuthorizationCore`
 
 Weitere Informationen finden Sie unter [Breaking Change in (Breaking Change in `AddAuthorization(o =>` ) der Überlastung in einer anderen Assembly #386](https://github.com/aspnet/Announcements/issues/386).
@@ -1141,9 +1142,9 @@ Das [Microsoft. Extensions. Caching. redis](https://www.nuget.org/packages/Micro
 
 ## <a name="opt-in-to-runtime-compilation"></a>Abonnieren der Lauf Zeit Kompilierung
 
-Vor ASP.net Core 3,0 war die Lauf Zeit Kompilierung von Sichten eine implizite Funktion des Frameworks. Die Lauf Zeit Kompilierung ergänzt die Kompilierung der Erstellung von Sichten. Dadurch kann das Framework Razor Sichten und Seiten (*cshtml* -Dateien) kompilieren, wenn die Dateien geändert werden, ohne dass die gesamte APP neu erstellt werden muss. Diese Funktion unterstützt das Szenario der schnellen Bearbeitung in der IDE und das Aktualisieren des Browsers, um die Änderungen anzuzeigen.
+Vor ASP.net Core 3,0 war die Lauf Zeit Kompilierung von Sichten eine implizite Funktion des Frameworks. Die Lauf Zeit Kompilierung ergänzt die Kompilierung der Erstellung von Sichten. Dadurch kann das Framework Razor Sichten und Seiten ( *cshtml* -Dateien) kompilieren, wenn die Dateien geändert werden, ohne dass die gesamte APP neu erstellt werden muss. Diese Funktion unterstützt das Szenario der schnellen Bearbeitung in der IDE und das Aktualisieren des Browsers, um die Änderungen anzuzeigen.
 
-In ASP.net Core 3,0 ist die Lauf Zeit Kompilierung ein Opt-in-Szenario. Die Kompilierzeit Kompilierung ist der einzige Mechanismus zum Anzeigen der Kompilierung, der standardmäßig aktiviert ist. Die Laufzeit basiert auf Visual Studio oder [dotnet-Watch](xref:tutorials/dotnet-watch) in Visual Studio Code, um das Projekt neu zu erstellen, wenn Änderungen an *cshtml* -Dateien erkannt werden. In Visual Studio werden Änderungen an *den CS*- *, cshtml*-oder *Razor* -Dateien im Projekt, das ausgeführt wird (<kbd>STRG + F5</kbd>), aber nicht debuggt (<kbd>F5</kbd>), die Neukompilierung des Projekts auslöst.
+In ASP.net Core 3,0 ist die Lauf Zeit Kompilierung ein Opt-in-Szenario. Die Kompilierzeit Kompilierung ist der einzige Mechanismus zum Anzeigen der Kompilierung, der standardmäßig aktiviert ist. Die Laufzeit basiert auf Visual Studio oder [dotnet-Watch](xref:tutorials/dotnet-watch) in Visual Studio Code, um das Projekt neu zu erstellen, wenn Änderungen an *cshtml* -Dateien erkannt werden. In Visual Studio werden Änderungen an *den CS* - *, cshtml* -oder *Razor* -Dateien im Projekt, das ausgeführt wird ( <kbd>STRG + F5</kbd>), aber nicht debuggt ( <kbd>F5</kbd>), die Neukompilierung des Projekts auslöst.
 
 So aktivieren Sie die Lauf Zeit Kompilierung in Ihrem ASP.net Core 3,0-Projekt:
 
@@ -1175,7 +1176,7 @@ Bibliotheken müssen häufig mehrere Versionen von ASP.net Core unterstützen. D
 * Die Bibliothek basiert auf einer Funktion, die über eine binäre [Breaking Change](#breaking-api-changes)verfügt.
 * Die Bibliothek möchte die neuen Features in ASP.net Core 3,0 nutzen. 
 
-Beispiel:
+Zum Beispiel:
 
 ```xml
 <Project Sdk="Microsoft.NET.Sdk">
