commit translated contents

--- a/aspnetcore/migration/30-to-31.md
+++ b/aspnetcore/migration/30-to-31.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/30-to-31
-ms.openlocfilehash: 97afc236808b9473e8e50349c495cc3fff13cd19
-ms.sourcegitcommit: ca34c1ac578e7d3daa0febf1810ba5fc74f60bbf
+ms.openlocfilehash: f453ddbe62a7d16cb93b97b2f7445ad2a4d6adff
+ms.sourcegitcommit: fe5a287fa6b9477b130aa39728f82cdad57611ee
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 10/30/2020
-ms.locfileid: "93052213"
+ms.lasthandoff: 11/10/2020
+ms.locfileid: "94431094"
 ---
 # <a name="migrate-from-aspnet-core-30-to-31"></a>Migrieren von ASP.net Core 3,0 zu 3,1
 
@@ -49,7 +49,7 @@ In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,0-Projekt 
 
 ## <a name="update-net-core-sdk-version-in-globaljson"></a>Aktualisieren der .NET Core SDK-Version in „global.json“
 
-Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK. Zum Beispiel:
+Wenn Sie sich auf eine [global.jsin](/dotnet/core/tools/global-json) der Datei verlassen, um eine bestimmte .net Core SDK Version als Ziel festzustellen, aktualisieren Sie die `version` -Eigenschaft auf die installierte Version 3,1 SDK. Beispiel:
 
 ```diff
 {
@@ -77,7 +77,7 @@ Aktualisieren Sie in der Projektdatei den [zielframeworkmoniker (TFM)](/dotnet/s
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
-Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher. Zum Beispiel:
+Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jedes Paket Verweises `Version` auf 3.1.0 oder höher. Beispiel:
 
 ```diff
 <ItemGroup>
@@ -90,7 +90,7 @@ Aktualisieren Sie in der Projektdatei die `Microsoft.AspNetCore.*` Attribute jed
 
 ## <a name="update-docker-images"></a>Aktualisieren von Docker-Images
 
-Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält. Zum Beispiel:
+Verwenden Sie für apps, die Docker verwenden, ein Basis Image, das ASP.net Core 3,1 enthält. Beispiel:
 
 ```console
 docker pull mcr.microsoft.com/dotnet/core/aspnet:3.1
@@ -121,4 +121,4 @@ In ASP.net Core 3,1 wird ein `Component` taghilfsprogramm eingeführt. Das taghi
 + <component type="typeof(Counter)" render-mode="ServerPrerendered" param-IncrementAmount="10" />
 ```
 
-Weitere Informationen finden Sie unter <xref:blazor/components/integrate-components-into-razor-pages-and-mvc-apps>.
+Weitere Informationen finden Sie unter <xref:blazor/components/prerendering-and-integration>.
