--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -4,7 +4,7 @@ author: scottaddie
 description: Erfahren Sie, wie Sie ein ASP.net Core 3,1-Projekt zu ASP.net Core 5,0 migrieren.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 10/20/2020
+ms.date: 11/10/2020
 no-loc:
 - appsettings.json
 - ASP.NET Core Identity
@@ -18,21 +18,18 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: a986725e089666a83c431832a50d32224f020904
-ms.sourcegitcommit: 45aa1c24c3fdeb939121e856282b00bdcf00ea55
+ms.openlocfilehash: b48fa4e6619bcfd6168a3d5d68c1c6e03ab24db2
+ms.sourcegitcommit: fe5a287fa6b9477b130aa39728f82cdad57611ee
 ms.translationtype: MT
 ms.contentlocale: de-DE
-ms.lasthandoff: 11/04/2020
-ms.locfileid: "93343727"
+ms.lasthandoff: 11/10/2020
+ms.locfileid: "94431081"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
 Von [Scott Addie](https://github.com/scottaddie)
 
 In diesem Artikel wird erläutert, wie ein vorhandenes ASP.net Core 3,1-Projekt auf ASP.net Core 5,0 aktualisiert wird.
-
-> [!IMPORTANT]
-> ASP.net Core 5,0 befindet sich derzeit in der Vorschau Phase.
 
 ## <a name="prerequisites"></a>Voraussetzungen
 
@@ -58,7 +55,7 @@ Wenn Sie sich für eine bestimmte .net Core SDK Version auf eine [global.jsin](/
 {
   "sdk": {
 -    "version": "3.1.200"
-+    "version": "5.0.100-rc.2.20479.15"
++    "version": "5.0.100"
   }
 }
 ```
@@ -108,6 +105,8 @@ Blazor WebAssemblyWenden Sie für ein Projekt, einschließlich des *`Client`* Pr
     -    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.1" PrivateAssets="all" />
     ```
 
+1. Aktualisieren Sie andere Pakete auf die neuesten Versionen. Die neuesten Versionen finden Sie unter [NuGet.org](https://www.nuget.org).
+
 ### <a name="standalone-no-locblazor-webassembly-app-with-microsoft-accounts"></a>Eigenständige Blazor WebAssembly App mit Microsoft-Konten
 
 Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert ist, um Azure Active Directory (AAD) für Microsoft-Konten zu verwenden:
@@ -151,10 +150,27 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
   
 * Die Platt Form Konfiguration ist auf **Single-Page Application (Spa)** im Azure-Portal mit dem Umleitungs-URI der APP festgelegt.
 
-Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>.
+Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c>.
 
-> [!NOTE]
-> Aktualisieren Sie das *`Server`* Projekt einer gehosteten Blazor Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.
+### <a name="update-the-server-project-of-a-hosted-no-locblazor-solution"></a>Aktualisieren des Server Projekts einer gehosteten Blazor Lösung
+
+Aktualisieren Sie das *`Server`* Projekt einer gehosteten Blazor Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.
+
+### <a name="unauthorized-client-for-azure-active-directory-aad"></a>Nicht autorisierter Client für Azure Active Directory (AAD)
+
+Nach dem Upgrade einer Blazor WebAssembly app, die Aad für die Authentifizierung verwendet, erhalten Sie möglicherweise die folgende Fehlermeldung für den Anmelde Rückruf an die APP, nachdem sich der Benutzer mit Aad angemeldet hat:
+
+> Info: Fehler bei der Autorisierung von Microsoft. aspnetcore. Authorization. defaultauthorizationservice [2]. Diese Anforderungen wurden nicht erfüllt: denyanonymousauthorizationrequirements: erfordert einen authentifizierten Benutzer.
+
+Anmelde Rückruf Fehler von Aad:
+
+* Fehler: `unauthorized_client`
+* Description (Beschreibung): `AADB2C90058: The provided application is not configured to allow public clients.`
+
+So beheben Sie den Fehler
+
+1. Greifen Sie in der Azure-Portal auf das [Manifest der APP](/azure/active-directory/develop/reference-app-manifest)zu.
+1. Legen Sie das- [`allowPublicClient`](/azure/active-directory/develop/reference-app-manifest#allowpublicclient-attribute) Attribut auf `null` oder fest `true` .
 
 ## <a name="update-package-references"></a>Aktualisieren von Paketverweisen
 
@@ -165,9 +181,9 @@ Aktualisieren Sie in der Projektdatei alle [Microsoft. aspnetcore. *](https://ww
 -    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="3.1.6" />
 -    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="3.1.6" />
 -    <PackageReference Include="System.Net.Http.Json" Version="3.2.1" />
-+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0-rc.2.*" />
-+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0-rc.2.*" />
-+    <PackageReference Include="System.Net.Http.Json" Version="5.0.0-rc.2.*" />
++    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="5.0.0" />
++    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="5.0.0" />
++    <PackageReference Include="System.Net.Http.Json" Version="5.0.0" />
 </ItemGroup>
 ```
 
