commit translated contents

--- a/aspnetcore/migration/31-to-50.md
+++ b/aspnetcore/migration/31-to-50.md
@@ -18,12 +18,12 @@ no-loc:
 - Razor
 - SignalR
 uid: migration/31-to-50
-ms.openlocfilehash: b48fa4e6619bcfd6168a3d5d68c1c6e03ab24db2
-ms.sourcegitcommit: fe5a287fa6b9477b130aa39728f82cdad57611ee
+ms.openlocfilehash: df62dcdbb264ebc945aa6cf91ee9d8791f33c392
+ms.sourcegitcommit: fbd5427293d9ecccc388bd5fd305c2eb8ada7281
 ms.translationtype: MT
 ms.contentlocale: de-DE
 ms.lasthandoff: 11/10/2020
-ms.locfileid: "94431081"
+ms.locfileid: "94464223"
 ---
 # <a name="migrate-from-aspnet-core-31-to-50"></a>Migrieren von ASP.net Core 3,1 zu 5,0
 
@@ -118,7 +118,9 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
   options.ProviderOptions.DefaultAccessTokenScopes.Add("offline_access");
   ```
   
-* Die Platt Form Konfiguration ist auf **Single-Page Application (Spa)** im Azure-Portal mit dem Umleitungs-URI der APP festgelegt.
+* Legen Sie auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** die Platt Form Konfiguration auf **einseitige Anwendung** mit dem Umleitungs-URI der APP fest.
+
+* Deaktivieren Sie auf dem Blatt " **Authentifizierung** " auch die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-microsoft-accounts>.
 
@@ -133,7 +135,9 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
       .Add("https://graph.microsoft.com/User.Read");
   ```
   
-* Die Platt Form Konfiguration ist auf **Single-Page Application (Spa)** im Azure-Portal mit dem Umleitungs-URI der APP festgelegt.
+* Legen Sie auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** die Platt Form Konfiguration auf **einseitige Anwendung** mit dem Umleitungs-URI der APP fest.
+
+* Deaktivieren Sie auf dem Blatt " **Authentifizierung** " auch die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
   
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory>.
 
@@ -148,13 +152,51 @@ Für eine eigenständige Blazor WebAssembly app, die im Azure-Portal registriert
   options.ProviderOptions.DefaultAccessTokenScopes.Add("offline_access");
   ```
   
-* Die Platt Form Konfiguration ist auf **Single-Page Application (Spa)** im Azure-Portal mit dem Umleitungs-URI der APP festgelegt.
+* Legen Sie auf dem Blatt Azure-Portal App-Registrierungs **Authentifizierung** die Platt Form Konfiguration auf **einseitige Anwendung** mit dem Umleitungs-URI der APP fest.
+
+* Deaktivieren Sie auf dem Blatt " **Authentifizierung** " auch die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
 
 Weitere Informationen finden Sie unter <xref:blazor/security/webassembly/standalone-with-azure-active-directory-b2c>.
+
+### <a name="hosted-no-locblazor-webassembly-app-with-azure-active-directory-aad-or-b2c"></a>Gehostete Blazor WebAssembly App mit Azure Active Directory (AAD) oder B2C
+
+*`Client`* Bei der APP-Registrierung einer gehosteten Blazor Lösung, die Aad oder Aad B2C für die Benutzerauthentifizierung verwendet, sollte eine **Single-Page-Anwendung** der Azure apps-Platt Form Konfiguration verwendet werden:
+
+1. Entfernen Sie in der Azure-Portal App-Registrierung für die *`Client`* App die **Webplattform** -Konfiguration.
+1. Fügen Sie eine **Einzelseiten-Anwendungs** Platt Form Konfiguration mit dem Umleitungs-URI der APP hinzu.
+1. Deaktivieren Sie die **implizite Gewährung** für **Zugriffs Token** und **ID-Token**.
+
+Weitere Informationen finden Sie in folgenden Quellen:
+
+* <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
+* <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
 
 ### <a name="update-the-server-project-of-a-hosted-no-locblazor-solution"></a>Aktualisieren des Server Projekts einer gehosteten Blazor Lösung
 
 Aktualisieren Sie das *`Server`* Projekt einer gehosteten Blazor Lösung als ASP.net Core-APP, indem Sie die allgemeine Anleitung in diesem Artikel befolgen.
+
+Außerdem *`Server`* sollten Projekte, die Benutzer für Client- Blazor WebAssembly apps mit Azure Active Directory (AAD) oder B2C authentifizieren, neue Microsoft Identity v 2.0-Pakete übernehmen: 
+  
+Für Aad:
+
+```diff
+-<PackageReference Include="Microsoft.AspNetCore.Authentication.AzureAD.UI" Version="..." />
++<PackageReference Include="Microsoft.Identity.Web" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.2.0" />
+```
+
+Aad B2C:
+
+```diff
+-<PackageReference Include="Microsoft.AspNetCore.Authentication.AzureADB2C.UI" Version="..." />
++<PackageReference Include="Microsoft.Identity.Web" Version="1.2.0" />
++<PackageReference Include="Microsoft.Identity.Web.UI" Version="1.2.0" />
+```
+
+Weitere Informationen finden Sie in folgenden Quellen:
+
+* <xref:blazor/security/webassembly/hosted-with-azure-active-directory>
+* <xref:blazor/security/webassembly/hosted-with-azure-active-directory-b2c>
 
 ### <a name="unauthorized-client-for-azure-active-directory-aad"></a>Nicht autorisierter Client für Azure Active Directory (AAD)
 
